feat(athena): Create `rbac-registration` module (#552)
* feat: implement building reg chain logic

Signed-off-by: bkioshn <bkioshn@gmail.com>

* chore: change module name

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: cleanup

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: cleanup

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: cleanup

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: just build and cspell

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: typo

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: handle finalize

Signed-off-by: bkioshn <bkioshn@gmail.com>

* chore: grammar

Signed-off-by: bkioshn <bkioshn@gmail.com>

* fix: naming

Signed-off-by: bkioshn <bkioshn@gmail.com>

* chore: remove unused

---------

Signed-off-by: bkioshn <bkioshn@gmail.com>

--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -11,6 +11,10 @@
 		{
 			"package": "modules/rbac-registration-indexer/lib/rbac_registration_indexer.hmod",
 			"name": "rbac_registration_indexer"
+		},
+		{
+			"package": "modules/rbac-registration/lib/rbac_registration.hmod",
+			"name": "rbac_registration"
 		}
 	],
 	"www": "modules/http-proxy/lib/www"
