--- a/hermes/apps/athena/modules/http-proxy/Cargo.toml
+++ b/hermes/apps/athena/modules/http-proxy/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-wit-bindgen = "0.43.0"
+shared = { path = "../../shared" }
 serde = { version = "1.0", features = ["derive"] }
 tracing = "0.1.41"
 regex = "1.10"
