--- a/hermes/apps/athena/modules/http-proxy/Cargo.toml
+++ b/hermes/apps/athena/modules/http-proxy/Cargo.toml
@@ -2,12 +2,13 @@
 name = "http-proxy"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-shared = { path = "../../shared" }
+shared = { version = "0.1.0", path = "../../shared" }
 serde = { version = "1.0", features = ["derive"] }
 tracing = "0.1.41"
 regex = "1.10"
