--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -16,7 +16,10 @@ targets = [
 
 [advisories]
 version = 2
-ignore = []
+ignore = [
+    "RUSTSEC-2025-0067",
+    "RUSTSEC-2025-0068",
+]
 
 [bans]
 multiple-versions = "warn"
@@ -84,6 +87,7 @@ allow = [
     "MIT-0",
     "CDLA-Permissive-2.0",
     "OpenSSL",
+    "LGPL-3.0",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
