--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-shared = { version = "0.1.0", path = "../../shared" }
+shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types"] }
 anyhow = "1.0.98"
 serde_json = "1.0.142"
 
