--- a/hermes/apps/athena/modules/gateway/Cargo.toml
+++ b/hermes/apps/athena/modules/gateway/Cargo.toml
@@ -15,9 +15,8 @@ regex = "1.11.1"
 
 
 rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10" }
-cardano-chain-follower = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-chain-follower/v0.0.14" }
-catalyst-signed-doc = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-signed-doc/v0.0.7" }
 catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
+cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.6" }
 
 serde_json = { version = "1.0.132", features = ["arbitrary_precision"] }
 thiserror = "1.0.68"
@@ -30,18 +29,11 @@ duration-string = "0.4.0"
 ed25519-dalek = "2.1.1"
 strum = { version = "0.26.3", features = ["derive"] }
 num-bigint = "0.4.6"
-futures = "0.3.31"
+futures = { version = "0.3.31", default-features = false }
 moka = { version = "0.12.8", features = ["future"] }
-poem = { version = "=3.1.6", features = ["embed", "prometheus", "compression"] }
-poem-openapi = { version = "=5.1.5", features = [
-    "openapi-explorer",
-    "rapidoc",
-    "redoc",
-    "swagger-ui",
-    "uuid",
-    "url",
-    "chrono",
-] }
+headers = "0.4.1"
+http = "1.3.1"
+utoipa = "5.4.0"
 uuid = { version = "1.12.1", features = ["v4", "v7", "serde"] }
 blake2b_simd = "1.0.2"
 url = "2.5.3"
