--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -99,6 +99,8 @@ paste = "1.0.15"
 traitreg = "0.3.0"
 orx-concurrent-vec = "3.7.0"
 keyed-lock = "0.2.3"
+wasmprinter = "0.239.0"
+wat = "1.239.0"
 
 [build-dependencies]
 build-info-build = "0.0.41"
