--- a/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
@@ -7,12 +7,11 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-wit-bindgen = "0.43.0"
+shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types"] }
 anyhow = "1.0.98"
 serde_json = "1.0.142"
-strum = "0.27.2"
-strum_macros = "0.27.2"
 
 cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6" }
 rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10" }
 catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
+
