--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types"] }
 anyhow = "1.0.98"
+serde_json = "1.0.142"
 serde = "1.0.226"
 bech32 = "0.11.0"
 x509-cert = "0.2.5"
