--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -99,6 +99,8 @@ paste = "1.0.15"
 traitreg = "0.3.0"
 orx-concurrent-vec = "3.7.0"
 keyed-lock = "0.2.3"
+wasmprinter = "0.239.0"
+wat = "1.239.0"
 
 [build-dependencies]
 build-info-build = "0.0.41"
@@ -108,6 +110,7 @@ serial_test = { version = "3.2.0", features = ["file_locks"] }
 # An override with the "wat" and "addr2line" features added (debug purposes).
 wasmtime = { version = "37.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
 httpmock = "0.7.0"
+wasmtime-wasi = "37.0.2"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
