--- a/hermes/apps/athena/modules/gateway/Cargo.toml
+++ b/hermes/apps/athena/modules/gateway/Cargo.toml
@@ -31,7 +31,7 @@ futures = { version = "0.3.31", default-features = false }
 moka = { version = "0.12.8", features = ["future"] }
 headers = "0.4.1"
 http = "1.3.1"
-utoipa = "5.4.0"
+utoipa = { version = "5.4.0", features = ["uuid", "url"] }
 uuid = { version = "1.12.1", features = ["v4", "v7", "serde"] }
 blake2b_simd = "1.0.2"
 url = "2.5.3"
