feat: add HTTP endpoint subscription system
Replace hardcoded routing with configurable JSON-based endpoint subscriptions.
Routes HTTP requests to specific WASM modules using method/path/content-type
matching with regex specificity-based priority ordering.

- Add subscription manager with priority-based lookup
- Implement regex specificity scoring algorithm
- Load endpoint configs from JSON at startup
- Integrate with existing HTTP gateway routing
- Maintain backward compatibility for static assets

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -99,6 +99,7 @@ paste = "1.0.15"
 traitreg = "0.3.0"
 orx-concurrent-vec = "3.7.0"
 keyed-lock = "0.2.3"
+tempfile = "3.23.0"
 
 [build-dependencies]
 build-info-build = "0.0.41"
