--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.98"
 serde_json = "1.0.142"
 strum = "0.27.2"
 strum_macros = "0.27.2"
+log = { version = "0.4.28", features = ["kv_serde"] }
 
 cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6", optional = true }
 catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
