--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -60,6 +60,7 @@ ed25519-bip32 = "0.4.1"
 dashmap = "6.1.0"
 once_cell = "1.21.3"
 clap = "4.5.46"
+ctrlc = "3.5.0"
 build-info = "0.0.41"
 derive_more = "2.0.1"
 chrono = { version = "0.4.41", features = ["now"] }
