--- a/hermes/apps/athena/modules/staked-ada/lib/manifest_module.json
+++ b/hermes/apps/athena/modules/staked-ada/lib/manifest_module.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_module_manifest.schema.json",
-  "name": "gateway",
+  "name": "staked_ada",
   "metadata": "metadata.json",
-  "component": "gateway.wasm",
+  "component": "staked_ada.wasm",
   "config": {
     "file": "config.json",
     "schema": "config.schema.json"
