setup auth module
Signed-off-by: bkioshn <bkioshn@gmail.com>

--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -15,6 +15,10 @@
 		{
 			"package": "modules/rbac-registration/lib/rbac_registration.hmod",
 			"name": "rbac_registration"
+		},
+		{
+			"package": "modules/auth/lib/auth.hmod",
+			"name": "auth"
 		}
 	],
 	"www": "modules/http-proxy/lib/www"
