--- a/hermes/apps/athena/modules/staked-ada/Cargo.toml
+++ b/hermes/apps/athena/modules/staked-ada/Cargo.toml
@@ -7,29 +7,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types"] }
+shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types", "cat-gateway-types"] }
 tracing = { version = "0.1.41", features = ["log"] }
 regex = "1.11.1"
 
 
-rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10" }
-catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
 cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.6" }
 serde = "1.0.228"
 serde_json = { version = "1.0.132", features = ["arbitrary_precision"] }
-chrono = "0.4.38"
-hex = "0.4.3"
 anyhow = "1.0.99"
-ed25519-dalek = "2.1.1"
-strum = { version = "0.26.3", features = ["derive"] }
 num-bigint = "0.4.6"
-http = "1.3.1"
 utoipa = { version = "5.4.0", features = ["uuid", "url"] }
-uuid = { version = "1.12.1", features = ["v4", "v7", "serde"] }
-url = "2.5.3"
-base64 = "0.22.1"
-bech32 = "0.11.0"
-derive_more = { version = "2.0.1", default-features = false, features = [
-    "from",
-    "into",
-] }
