--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
+cardano-blockchain-types = [] # does nothing, deprecated. TODO(@no30bit): remove in dependencies.
 cat-gateway-types = [
     "rbac-registration",
     "regex",
@@ -18,8 +19,6 @@ cat-gateway-types = [
     "url",
     "base64",
     "bech32",
-    "derive_more",
-    "cardano-blockchain-types"
 ]
 
 [dependencies]
@@ -28,11 +27,9 @@ anyhow = "1.0.100"
 serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
+derive_more = { version = "2.0.1", features = ["from", "into", "deref", "deref_mut"] }
 log = { version = "0.4.28", features = ["kv_serde"] }
-cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6", optional = true }
-catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
 
-rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10", optional = true }
 regex = { version = "1.12.2", optional = true }
 serde = { version = "1.0.228", optional = true }
 chrono = { version = "0.4.42", optional = true }
@@ -45,7 +42,10 @@ uuid = { version = "1.18.1", features = ["v4", "v7", "serde"], optional = true }
 url = { version = "2.5.7", optional = true }
 base64 = { version = "0.22.1", optional = true }
 bech32 = { version = "0.11.0", optional = true }
-derive_more = { version = "2.0.1", default-features = false, features = [
-    "from",
-    "into",
-], optional = true }
+
+rbac-registration = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.10", optional = true }
+cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6" }
+catalyst-types = { version = "0.0.7", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.7" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+rusqlite = { version = "0.37.0", features = ["bundled"] }
