chore(hermes): fix lint issues in Athena

--- a/hermes/apps/athena/modules/staked-ada-indexer/Cargo.toml
+++ b/hermes/apps/athena/modules/staked-ada-indexer/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
+edition.workspace = true
 name = "staked-ada-indexer"
 version = "0.1.0"
-edition = "2021"
+
+[lints]
+workspace = true
 
 [lib]
 crate-type = ["cdylib"]
