--- a/hermes/apps/athena/modules/http-proxy/Cargo.toml
+++ b/hermes/apps/athena/modules/http-proxy/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
+edition.workspace = true
 name = "http-proxy"
 version = "0.1.0"
-edition = "2021"
+
+[lints]
+workspace = true
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 shared = { version = "0.1.0", path = "../../shared" }
-serde = { version = "1.0", features = ["derive"] }
-tracing = "0.1.41"
 regex = "1.10"
