--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
+edition.workspace = true
 name = "rbac-registration"
 version = "0.1.0"
-edition = "2021"
+
+[lints]
+workspace = true
 
 [lib]
 crate-type = ["cdylib"]
