--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
+edition.workspace = true
 name = "shared"
 version = "0.1.0"
-edition = "2021"
+
+[lints]
+workspace = true
 
 [features]
 cardano-blockchain-types = [] # does nothing, deprecated. TODO(@no30bit): remove in dependencies.
@@ -12,7 +15,7 @@ cat-gateway-types = [
     "chrono",
     "hex",
     "ed25519-dalek",
-    "http",
+    "num-bigint",
     "utoipa",
     "uuid",
     "url",
@@ -25,7 +28,6 @@ wit-bindgen = "0.46.0"
 anyhow = "1.0.100"
 serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
 strum = { version = "0.27.2", features = ["derive"] }
-strum_macros = "0.27.2"
 derive_more = { version = "2.0.1", features = ["from", "into", "deref", "deref_mut"] }
 log = { version = "0.4.28", features = ["kv_serde"] }
 num-bigint = "0.4.6"
@@ -35,6 +37,7 @@ serde = { version = "1.0.228", optional = true }
 chrono = { version = "0.4.42", optional = true }
 hex = { version = "0.4.3", optional = true }
 ed25519-dalek = { version = "2.2.0", optional = true }
+num-bigint = { version = "0.4.6", optional = true }
 http = { version = "1.3.1", optional = true }
 utoipa = { version = "5.4.0", features = ["uuid", "url"], optional = true }
 uuid = { version = "1.18.1", features = ["v4", "v7", "serde"], optional = true }
