--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -1,10 +1,43 @@
 [package]
-edition.workspace = true
+edition = "2021"
 name = "shared"
 version = "0.1.0"
 
-[lints]
-workspace = true
+[lints.rust]
+warnings = "deny"
+missing_docs = "deny"
+let_underscore_drop = "deny"
+non_ascii_idents = "deny"
+single_use_lifetimes = "deny"
+trivial_casts = "deny"
+trivial_numeric_casts = "deny"
+
+[lints.rustdoc]
+broken_intra_doc_links = "deny"
+invalid_codeblock_attributes = "deny"
+invalid_html_tags = "deny"
+invalid_rust_codeblocks = "deny"
+bare_urls = "deny"
+unescaped_backticks = "deny"
+
+[lints.clippy]
+pedantic = { level = "deny", priority = -1 }
+unwrap_used = "deny"
+expect_used = "deny"
+todo = "deny"
+unimplemented = "deny"
+exit = "deny"
+get_unwrap = "deny"
+index_refutable_slice = "deny"
+indexing_slicing = "deny"
+match_wild_err_arm = "deny"
+missing_panics_doc = "deny"
+panic = "deny"
+string_slice = "deny"
+unchecked_duration_subtraction = "deny"
+unreachable = "deny"
+missing_docs_in_private_items = "deny"
+arithmetic_side_effects = "deny"
 
 [features]
 cardano-blockchain-types = [] # does nothing, deprecated. TODO(@no30bit): remove in dependencies.
@@ -15,7 +48,6 @@ cat-gateway-types = [
     "chrono",
     "hex",
     "ed25519-dalek",
-    "num-bigint",
     "utoipa",
     "uuid",
     "url",
@@ -37,7 +69,6 @@ serde = { version = "1.0.228", optional = true }
 chrono = { version = "0.4.42", optional = true }
 hex = { version = "0.4.3", optional = true }
 ed25519-dalek = { version = "2.2.0", optional = true }
-num-bigint = { version = "0.4.6", optional = true }
 http = { version = "1.3.1", optional = true }
 utoipa = { version = "5.4.0", features = ["uuid", "url"], optional = true }
 uuid = { version = "1.18.1", features = ["v4", "v7", "serde"], optional = true }
