--- a/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
+edition.workspace = true
 name = "rbac-registration-indexer"
 version = "0.1.0"
-edition = "2021"
+
+[lints]
+workspace = true
 
 [lib]
 crate-type = ["cdylib"]
@@ -11,6 +14,7 @@ shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockc
 anyhow = "1.0.100"
 serde_json = "1.0.145"
 
-cardano-blockchain-types = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.8" }
 rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.14" }
-catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.10" }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
