chore(hermes): bump crate versions, fix ./hermes+check

--- a/hermes/bin/tests/integration/components/staked_ada_indexer_mock/Cargo.toml
+++ b/hermes/bin/tests/integration/components/staked_ada_indexer_mock/Cargo.toml
@@ -8,10 +8,10 @@ license.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-shared = { path = "../../../../../apps/athena/shared", features = ["cat-gateway-types"] }
+shared = { path = "../../../../../apps/athena/shared", version = "0.1.0", features = ["cat-gateway-types"] }
 
 anyhow = "1.0.100"
-cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6" }
+cardano-blockchain-types = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.8" }
 
 
 [lints]
