--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -4,7 +4,8 @@ members = [
     "bin",
     "bin/tests/integration/components/http_request_rte_01",
     "bin/tests/integration/components/failed_init",
-    "bin/tests/integration/components/sleep_component"
+    "bin/tests/integration/components/sleep_component",
+    "bin/tests/integration/components/cron_callback"
 ]
 default-members = [
     "bin",
