--- a/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
@@ -2,6 +2,7 @@
 edition.workspace = true
 name = "rbac-registration-indexer"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
 
 [lints]
 workspace = true
@@ -10,7 +11,9 @@ workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types"] }
+shared = { version = "0.1.0", path = "../../shared", features = [
+    "cardano-blockchain-types",
+] }
 anyhow = "1.0.100"
 serde_json = "1.0.145"
 
