--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -41,14 +41,14 @@ hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blo
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.6", features = ["lz4", "zlib", "zstd"] }
 
-wasmtime = { version = "37.0.2", default-features = false, features = ["runtime", "cranelift", "component-model"] }
-criterion = {version = "0.7.0", optional=true}
+wasmtime = { version = "38.0.3", default-features = false, features = ["runtime", "cranelift", "component-model"] }
+criterion = { version = "0.7.0", optional = true }
 rusty_ulid = "2.0.0"
 anyhow = "1.0.99"
 hex-literal = "1.0.0"
 thiserror = "2.0.16"
 hex = "0.4.3"
-tracing = {version="0.1.41", features = ["log"] }
+tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "time", "env-filter"] }
 libtest-mimic = "0.8.1"
 crossbeam-queue = "0.3.12"
@@ -61,19 +61,19 @@ dashmap = "6.1.0"
 once_cell = "1.21.3"
 clap = "4.5.46"
 ctrlc = "3.5.0"
-build-info = "0.0.41"
+build-info = "0.0.42"
 derive_more = "2.0.1"
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
 saffron = "0.1.0"
 tokio = { version = "1.47.1", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
 rayon = "1.11.0"
-libsqlite3-sys = {version="0.35.0", features = ["bundled"] }
+libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
 stringzilla = "4.2.3"
 temp-dir = "0.1.16"
 num_cpus = "1.17.0"
 console = "0.16.0"
-serde = { version="1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 jsonschema = "0.33.0"
 hyper = { version = "1.7.0", features = ["full"] }
@@ -83,11 +83,11 @@ hmac = "0.12.1"
 pbkdf2 = "0.12.2"
 blake2b_simd = "1.0.3"
 sha2 = "0.10.9"
-ed25519-dalek = { version="2.2.0", features = ["pem"] }
-x509-cert = { version="0.2.5", features = ["pem"] }
+ed25519-dalek = { version = "2.2.0", features = ["pem"] }
+x509-cert = { version = "0.2.5", features = ["pem"] }
 coset = "0.4.0"
 dirs = "6.0.0"
-regex = "1.12.2"
+regex = "1.11.2"
 rustls = { version = "0.23.35", default-features = false, features = ["ring","brotli","zlib"] }
 webpki-roots = "1.0.2"
 tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
@@ -96,22 +96,22 @@ uuid = { version = "1.18.0", features = ["v4"] }
 reqwest = "0.12.24"
 url = "2.5.7"
 num-traits = "0.2.19"
-paste = "1.0.15"
+paste = { package = "pastey", version = "0.1.1" }
 traitreg = "0.4.0"
-orx-concurrent-vec = "3.7.0"
+orx-concurrent-vec = "3.10.0"
 keyed-lock = "0.2.3"
-wasmprinter = "0.239.0"
+wasmprinter = "0.240.0"
 wat = "1.239.0"
 
 [build-dependencies]
-build-info-build = "0.0.41"
+build-info-build = "0.0.42"
 
 [dev-dependencies]
 serial_test = { version = "3.2.0", features = ["file_locks"] }
 # An override with the "wat" and "addr2line" features added (debug purposes).
-wasmtime = { version = "37.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
-httpmock = "0.7.0"
-wasmtime-wasi = "37.0.2"
+wasmtime = { version = "38.0.3", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
+httpmock = "0.8.2"
+wasmtime-wasi = "38.0.3"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
