--- a/hermes/clippy.toml
+++ b/hermes/clippy.toml
@@ -1,4 +1,5 @@
 allow-unwrap-in-tests = true
 allow-expect-in-tests = true
 allow-panic-in-tests = true
+allow-indexing-slicing-in-tests = true
 arithmetic-side-effects-allowed = ["num_bigint::BigInt"]
