--- a/hermes/apps/athena/modules/auth/Cargo.toml
+++ b/hermes/apps/athena/modules/auth/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
+edition.workspace = true
 name = "auth"
 version = "0.1.0"
-edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [lib]
 crate-type = ["cdylib"]
