feat: implement doc-sync channel::post API for issue #628
- Add channel::post(document_bytes) API as requested
- Integrate hermes-ipfs library for IPFS operations
- Add HTTP endpoints for testing (/api/doc-sync/*)
- Configure HTTP gateway routing
- Implement IPFS add, pin, and PubSub publish workflow

--- a/hermes/apps/athena/manifest_app.json
+++ b/hermes/apps/athena/manifest_app.json
@@ -23,6 +23,10 @@
     {
       "package": "modules/staked-ada/lib/staked_ada.hmod",
       "name": "staked_ada"
+    },
+    {
+      "package": "modules/doc-sync/lib/doc_sync.hmod",
+      "name": "doc_sync"
     }
   ],
   "www": "modules/http-proxy/lib/www"
