--- a/hermes/apps/athena/shared/Cargo.toml
+++ b/hermes/apps/athena/shared/Cargo.toml
@@ -82,3 +82,6 @@ catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 rusqlite = { version = "0.37.0", features = ["bundled"] }
+
+[dev-dependencies]
+test-case = "3.3.1"
