feat(hermes): add doc-sync opening test

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -6,7 +6,8 @@ members = [
     "bin/tests/integration/components/failed_init",
     "bin/tests/integration/components/sleep_component",
     "bin/tests/integration/components/cron_callback",
-    "bin/tests/integration/components/staked_ada_indexer_mock"
+    "bin/tests/integration/components/staked_ada_indexer_mock",
+    "bin/tests/integration/components/ipfs_subscribe",
 ]
 default-members = [
     "bin",
