Update deps in `hermes` and `shared`

--- a/hermes/apps/athena/modules/auth/Cargo.toml
+++ b/hermes/apps/athena/modules/auth/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = "1.0.142"
 serde = "1.0.226"
 
 cardano-blockchain-types = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.8" }
-rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.14" }
+rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "feat/rbac" }
 catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.10" }
 
 [dev-dependencies]
