--- a/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration-indexer/Cargo.toml
@@ -17,7 +17,7 @@ shared = { version = "0.1.0", path = "../../shared", features = [
 anyhow = "1.0.100"
 serde_json = "1.0.145"
 
-rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.14" }
+rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "feat/rbac" }
 
 [package.metadata.cargo-machete]
 ignored = ["serde_json"]
