chore(deps): Update to updated RBAC validation in `catalyst-libs` (#692)
* Update deps in `hermes` and `shared`

* Update dependencies in `athena`

* Satisfy Clippy

* Use stateless RBAC validation in `athena`

* Update `rbac-registration-indexer`

* Fix `auth` module

* Bump deps

* Bump deps

--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -27,8 +27,8 @@ regex = "1.12.2"
 uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
 base64 = "0.22.1"
 
-cardano-blockchain-types = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.8" }
-rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.14" }
+cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
+rbac-registration = { version = "0.0.15", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.15" }
 catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.10" }
 c509-certificate = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "c509-certificate-v0.0.3" }
 
