feat(p2p-testing): Add cross-platform build checks and improve error handling
  Enhances the P2P testing infrastructure to ensure cross-platform compatibility
  and provide better error handling for common Docker issues.

  Changes:
  - Add error handling for Docker network and container conflicts in start-nodes.sh
  - Emphasize Earthly (containerized builds) for GLIBC compatibility across different host OS
  - Add comprehensive documentation about cross-platform build requirements
  - Update Dockerfile and docker-compose.yml with clear build instructions
  - Add troubleshooting section for GLIBC errors in README

  The scripts now detect and provide helpful error messages for:
  - Network subnet overlaps with existing Docker networks
  - Container name conflicts from previous runs
  - Guidance to use Earthly builds instead of local cargo builds

  This ensures the P2P testing environment works reliably across different
  development environments (Fedora, Ubuntu, macOS, etc.) by building binaries
  in a controlled container environment that matches the Docker runtime GLIBC version.

--- a/p2p-testing/Dockerfile
+++ b/p2p-testing/Dockerfile
@@ -1,5 +1,14 @@
 # Dockerfile for Hermes P2P Testing
-# Uses Earthly-built artifacts for cross-platform compatibility
+#
+# CRITICAL: This Dockerfile expects pre-built artifacts from Earthly (containerized builds).
+# Do NOT use locally-built binaries (cargo build) as they may have GLIBC incompatibilities.
+#
+# Build artifacts with:
+#   just get-local-hermes    # Earthly containerized build (GLIBC-compatible)
+#   just get-local-athena    # Earthly WASM build + packaging
+#
+# Why Earthly? Ensures binaries built in a controlled environment match the GLIBC
+# version in this Debian Bookworm container, regardless of host OS (Fedora, Ubuntu, etc.)
 
 FROM debian:bookworm-slim
 
@@ -13,8 +22,8 @@ RUN apt-get update && apt-get install -y \
 # Create hermes user
 RUN useradd -m -u 1000 hermes
 
-# Copy Earthly-built artifacts
-# These should be built with: earthly ./hermes+build && earthly ./hermes+build-athena
+# Copy Earthly-built artifacts (GLIBC-compatible with Debian Bookworm)
+# IMPORTANT: These MUST be built with Earthly, not local cargo builds
 COPY hermes/target/release/hermes /usr/local/bin/hermes
 COPY hermes/apps/athena/athena.happ /app/athena.happ
 
